--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gulp-plumber": "^1.0.0",
     "gulp-traceur": "^0.17.1",
     "gulp-typescript": "^2.6.0",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "partialify": "^3.1.3"
   },
   "browserify": {
     "transform": [
